--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta property="og:url" content="https://dripgen.xyz/" />
-    <meta property="og:title" content="Drip GEN - Website" />
+    <meta property="og:title" content="DripGen - Website" />
     <meta property="og:description" conTutorials of alltent=" We Provide Almost All The Best Accounts Through Our Free Gen Premium Gen Buyers GET Access To The Premium BOT Which Always GEN's Working Accounts!" />
     <meta property="og:image" content="https://i.imgur.com/1Rw7HVl.jpg">
     <meta property="og:type" content="website" />
@@ -14,7 +14,7 @@
     <!-- Include this to make the og:image larger -->
     <meta name="twitter:card" content="https://i.imgur.com/vZG9F0a.pn">
 
-    <title>Drip GEN - Website</title>
+    <title>DripGen - Website</title>
     <!--font-awesome icons link-->
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
@@ -131,7 +131,7 @@
             <div class="row">
                 <div class="col-lg-7 banner-txt">
                     <h3>Best Cracked Accounts, Best GEN On Discord, FREE GEN (Invite Access) </h3>
-                    <p>Drip GEN The Best Free Discord Gen Out There! Almost Every Cracked Account Is Present! Premium Drip Gen For Premium Memember's!</p>
+                    <p>DripGen The Best Free Discord Gen Out There! Almost Every Cracked Account Is Present! Premium DripGen For Premium Memember's!</p>
                     <a target="_blank" href="https://www.youtube.com/c/DrTeilaw">Watch now</a>
                 </div>
                 <div class="col-lg-5">
@@ -197,9 +197,9 @@
                     <div class="product-item">
                         <div class="row">
                             <div class="col-lg-8 col-md-7 product-txt">
-                                <span>Drip GEN</span>
+                                <span>DripGen</span>
                                 <h3>Discord Server</h3>
-                                <p>The Best Server To Gen Loads Of Accounts, <br> Helpful And Friendly Staff,<br> -DRIP GEN (BEST ACCOUNT GEN)!</p>
+                                <p>The Best Server To Gen Loads Of Accounts, <br> Helpful And Friendly Staff,<br> -DripGen (BEST ACCOUNT GEN)!</p>
                                 <a target="_blank" href="https://discord.gg/uA5YFBt">Join Us Now!</a>
                             </div>
                             <div class="col-lg-4 col-md-4 mob-img-hide">
@@ -414,7 +414,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="fop-btm text-center">
-                        <h2>Copyright &copy; 2020. All rights reserved by <a href="#">DRIP GEN</a></h2>
+                        <h2>Copyright &copy; 2020. All rights reserved by <a href="#">DripGen</a></h2>
                     </div>
                 </div>
             </div>
