--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" conTutorials of alltent=" We Provide Almost All The Best Accounts Through Our Free Gen Premium Gen Buyers GET Access To The Premium BOT Which Always GEN's Working Accounts!" />
     <meta property="og:image" content="https://i.imgur.com/1Rw7HVl.jpg">
     <meta property="og:type" content="website" />
-    <meta name="theme-color" content="#cf3298">
+    <meta name="theme-color" content="#32aacf">
 
     <!-- Include this to make the og:image larger -->
     <meta name="twitter:card" content="https://i.imgur.com/vZG9F0a.pn">
