--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         <div class="container zindex">
             <div class="row">
                 <div class="col-lg-7 banner-txt">
-                    <h3>Best Cracked Accounts, Best GEN On Discord, FREE GEN (Invite Access) </h3>
-                    <p>DripGen The Best Free Discord Gen Out There! Almost Every Cracked Account Is Present! Premium DripGen For Premium Memember's!</p>
-                    <a target="_blank" href="https://www.youtube.com/c/DrTeilaw">Watch now</a>
+                    <h3>Best Discord Account Generator! </h3>
+                    <p>DripGen Is The Best Free Discord Gen Out There! Buying Premium Will Give You Access To More Accounts And They Are Almost All Working!</p>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=olT7_ugQyn8">Watch now</a>
                 </div>
                 <div class="col-lg-5">
                     <div class="banner-img">
@@ -160,7 +160,7 @@
                                 <i class="fa fa-book over-i" aria-hidden="true"></i>
                                 <div class="break"></div>
                                 <h3>Discord Server</h3>
-                                <p>We Provide Almost All The Best Accounts Through Our Free Gen Premium Gen Buyers GET Access To The Premium BOT Which Always GEN's Working Accounts!</p>
+                                <p>We Provide Extrodanary Services Which Allow You To Generate Many Different Types Of Accounts!</p>
                                 <div class="over-btn">
                                     <a target="_blank" href="https://discord.gg/uA5YFBt">Join Now</a>
                                 </div>
@@ -171,9 +171,9 @@
                                 <i class="fa fa-video-camera over-i" aria-hidden="true"></i>
                                 <div class="break"></div>
                                 <h3>Discord Backup</h3>
-                                <p>Our Backup If Discord Deciedes To Beam US. I Mean Drip Cant Be Stopped We Will Always Be Back Up! And Bring U The Best Gen There Is!</p>
+                                <p>Our Backup Is If Discord Decides To Go Rage Mode On Us! So Dont Forget To Join It</p>
                                 <div class="over-btn">
-                                    <a target="_blank" href="https://discord.gg/xqjE6Cz">Join Now</a>
+                                    <a target="_blank" href="https://discord.gg/xqjE6Cz">Backup Link!</a>
                                 </div>
                             </div>
                         </div>
@@ -199,7 +199,7 @@
                             <div class="col-lg-8 col-md-7 product-txt">
                                 <span>DripGen</span>
                                 <h3>Discord Server</h3>
-                                <p>The Best Server To Gen Loads Of Accounts, <br> Helpful And Friendly Staff,<br> -DripGen (BEST ACCOUNT GEN)!</p>
+                                <p>The Best Gen Server To Generate Many Different Types Of Accounts, <br> Helpful And Friendly Staff,<br> -DripGen (Hghest Quality Account Generator)!</p>
                                 <a target="_blank" href="https://discord.gg/uA5YFBt">Join Us Now!</a>
                             </div>
                             <div class="col-lg-4 col-md-4 mob-img-hide">
