--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                 <h3>Discord Server</h3>
                                 <p>We Provide Extrodanary Services Which Allow You To Generate Many Different Types Of Accounts!</p>
                                 <div class="over-btn">
-                                    <a target="_blank" href="https://discord.gg/uA5YFBt">Join Now</a>
+                                    <a target="_blank" href="https://discord.gg/uA5YFBt">Main Discord Server!</a>
                                 </div>
                             </div>
                         </div>
