--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                 <h3>Discord Server</h3>
                                 <p>We Provide Extrodanary Services Which Allow You To Generate Many Different Types Of Accounts!</p>
                                 <div class="over-btn">
-                                    <a target="_blank" href="https://discord.gg/uA5YFBt">Main Discord Server!</a>
+                                    <a target="_blank" href="https://discord.gg/PQwzVavFah">Main Discord Server!</a>
                                 </div>
                             </div>
                         </div>
@@ -200,7 +200,7 @@
                                 <span>DripGen</span>
                                 <h3>Discord Server</h3>
                                 <p>The Best Gen Server To Generate Many Different Types Of Accounts, <br> Helpful And Friendly Staff,<br> -DripGen (Hghest Quality Account Generator)!</p>
-                                <a target="_blank" href="https://discord.gg/uA5YFBt">Join Us Now!</a>
+                                <a target="_blank" href="https://discord.gg/xqjE6Cz">Join Us Now!</a>
                             </div>
                             <div class="col-lg-4 col-md-4 mob-img-hide">
                                 <img src="images/new_pro1.png" alt="product-img">
